sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  Boolean chg = true;
  while(chg){
    chg=false;
    for(i = 0; i< getNombreValeurs()-2; i++){
      if(plusPetit(i+1,i)){
        echange(i+1,i);
          chg=true;
      }
    }
    for(j = getNombreValeurs()-2; j >=0; j--){
      if(plusPetit(j+1,j)){
        echange(j+1,j);
        chg=true;
      }
    }
  }
}
